--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,10 @@ set(UTILS_SOURCES
     src/utils/Utils.cpp
 )
 
+set(THREAD_MANAGER_SOURCES
+    src/ThreadManager/ThreadManager.cpp
+)
+
 add_executable(TRX
     src/main.cpp
 )
@@ -52,13 +56,16 @@ target_include_directories(fkYAML INTERFACE ${CMAKE_SOURCE_DIR}/third_party/fkYA
 target_compile_options(fkYAML INTERFACE -Wno-shadow)
 ### THRID PARTY ###
 
+add_library(THREAD_MANAGER ${THREAD_MANAGER_SOURCES})
 add_library(CONFIG ${CONFIG_SOURCES})
 add_library(SDR ${SDR_SOURCES})
 add_library(utils ${UTILS_SOURCES})
 
-target_link_libraries(TRX PRIVATE CONFIG utils fkYAML SDR)
+target_link_libraries(TRX PRIVATE CONFIG utils fkYAML SDR THREAD_MANAGER atomic)
 target_include_directories(TRX PRIVATE ${CMAKE_SOURCE_DIR}/src/include)
 
+
+# Пока не доверять компиляции с флагами:
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     target_compile_options(TRX PRIVATE -fsanitize=undefined -fsanitize=address)
     target_compile_options(CONFIG PRIVATE -fsanitize=undefined -fsanitize=address)
