--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -Wpedantic -Wconversion -std=c++20")
 
+find_package(SoapySDR REQUIRED)
+
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
     # set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -fsanitize=address")
@@ -53,5 +55,5 @@ add_library(THREAD_MANAGER ${THREAD_MANAGER_SOURCES})
 add_library(CONFIG ${CONFIG_SOURCES})
 add_library(SDR ${SDR_SOURCES})
 add_library(utils ${UTILS_SOURCES})
-target_link_libraries(TRX PRIVATE CONFIG utils fkYAML SDR THREAD_MANAGER atomic)
+target_link_libraries(TRX PRIVATE CONFIG utils SDR fkYAML THREAD_MANAGER atomic SoapySDR)
 target_include_directories(TRX PRIVATE ${CMAKE_SOURCE_DIR}/src/include)
